# IKOGL2

./: .gitignore  CMakeLists.txt  LICENSE
arduino IDE/: dynamixel_esp32_ik.ino
src/: NetworkClient.cpp  NetworkClient.h  config.h  main.cpp
